--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Free Web tutorials">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-	<meta name="author" content="John Doe">
+	<meta name="description" content="Practice Files">
+	<meta name="keywords" content="HTML,CSS,JavaScript">
+	<meta name="author" content="MW">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Practice Practice Practice</title>
+
+	<script src="/assets/js/script.js"></script>
+
 	<noscript>Your browser does not support JavaScript!</noscript>
+
+	<style>
+		body {
+			background-color: white;
+			}
+	</style>
+
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+
+
 </head>
 
 <body>
@@ -20,7 +34,7 @@
 	<h4>Heading 4</h4>
 	<h5>Heading 5</h5>
 	<h6>Heading 6</h6>
-	<p>This is a paragraph.</p>
+	<p style="color: black;">This is a paragraph</p>
 
 </body>
 
