--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Practice Practice Practice</title>
-
-	<script src="/assets/js/script.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="assets/js/script.js"></script>
 
 	<noscript>Your browser does not support JavaScript!</noscript>
 
@@ -20,7 +20,10 @@
 			}
 	</style>
 
-	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	
 
 
 </head>
@@ -34,7 +37,7 @@
 	<h4>Heading 4</h4>
 	<h5>Heading 5</h5>
 	<h6>Heading 6</h6>
-	<p style="color: black;">This is a paragraph</p>
+	<p style="color: rgba(0, 0, 0, .87);;">This is a paragraph</p>
 
 </body>
 
