--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Normalize CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/normalize.css">	
-	<!-- Google Material Design -->
-	<link rel="stylesheet" type="text/css" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
-	<!-- My Own CSS -->
+		<!-- My Own CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<!-- Internal Style Sheet -->
@@ -40,8 +38,6 @@
 	<!-- EXTERNAL SCRIPTS -->
 	<!-- Jquery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<!-- Google Material Design Javascript -->
-	<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 	<!-- My Own Javascript -->
 	<script src="assets/js/script.js"></script>
 
@@ -53,17 +49,6 @@
 <body>
 	<!-- THIS IS A COMMENT -->
 
-	<!-- GMD TOP APP BAR -->
-	<header class="mdc-top-app-bar">
-		<div class="mdc-top-app-bar__row">
-			<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-				<a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
-				<span class="mdc-top-app-bar__title">Practice, Practice, Practice</span>
-			</section>
-		</div>
-	</header>
-
-
 	<h1>Heading 1</h1>
 	<h2>Heading 2</h2>
 	<h3>Heading 3</h3>
@@ -71,62 +56,10 @@
 	<h5>Heading 5</h5>
 	<h6>Heading 6</h6>
 	<p style="color: rgba(0, 0, 0, .87);;">This is a paragraph</p>
-
-
-	<button class="mdc-button">
-		<span class="mdc-button__label">button</span>
-	</button>
 	<br>
-		<button class="mdc-icon-button material-icons">favorite</button>
-
-		<br>
-
-		<div class="mdc-card">
-				<!-- ... content ... -->
-			  </div>
-
-			  <div class="mdc-chip-set">
-					<div class="mdc-chip" tabindex="0">
-					  <div class="mdc-chip__text">Chip content</div>
-					</div>
-					...
-				  </div>
-
-				  <div class="mdc-grid-list">
-						<ul class="mdc-grid-list__tiles">
-						  <li class="mdc-grid-tile">
-							<div class="mdc-grid-tile__primary">
-							  <img class="mdc-grid-tile__primary-content" src="my-image.jpg" />
-							</div>
-							<span class="mdc-grid-tile__secondary">
-							  <span class="mdc-grid-tile__title">Title</span>
-							</span>
-						  </li>
-						  <li class="mdc-grid-tile">
-							<div class="mdc-grid-tile__primary">
-							  <img class="mdc-grid-tile__primary-content" src="my-image.jpg" />
-							</div>
-							<span class="mdc-grid-tile__secondary">
-							  <span class="mdc-grid-tile__title">Title</span>
-							</span>
-						  </li>
-						</ul>
-					  </div>
+		<span class="material-icons">favorite</span>
 
 
-
-
-					  <ul class="mdc-image-list my-image-list">
-							<li class="mdc-image-list__item">
-							  <div class="mdc-image-list__image-aspect-container">
-								<img class="mdc-image-list__image" src="...">
-							  </div>
-							  <div class="mdc-image-list__supporting">
-								<span class="mdc-image-list__label">Text label</span>
-							  </div>
-							</li>
-							...
-						  </ul>
 </body>
 
 </html>
