Adding Bootstrap intead of material

--- a/index.html
+++ b/index.html
@@ -19,47 +19,176 @@
 	<!-- Roboto Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Normalize CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/normalize.css">	
-		<!-- My Own CSS -->
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<!-- My Own CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<!-- Internal Style Sheet -->
 	<style>
-		body {
-			background-color: white;
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-			position: absolute;
-			}
+		* {
+			font-family: 'Roboto', sans-serif;
+		}
 	</style>
 
 	<!-- EXTERNAL SCRIPTS -->
 	<!-- Jquery -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
 	<!-- My Own Javascript -->
 	<script src="assets/js/script.js"></script>
-
-	<!-- Define alternate content for users that have disabled or don't support scripts in their browser. -->
-	<noscript>Your browser does not support JavaScript!</noscript>
-
 </head>
-
 <body>
 	<!-- THIS IS A COMMENT -->
+	<div class="container-fluid">
+		<div class="container">
 
-	<h1>Heading 1</h1>
-	<h2>Heading 2</h2>
-	<h3>Heading 3</h3>
-	<h4>Heading 4</h4>
-	<h5>Heading 5</h5>
-	<h6>Heading 6</h6>
-	<p style="color: rgba(0, 0, 0, .87);;">This is a paragraph</p>
+
+
+			<h1>Heading 1</h1>
+			<h2>Heading 2</h2>
+			<h3>Heading 3</h3>
+			<h4>Heading 4</h4>
+			<h5>Heading 5</h5>
+			<h6>Heading 6</h6><p style="color: rgba(0, 0, 0, .87);;">Morbi ipsum lectus, iaculis eget elit eu, egestas semper metus. Vestibulum quis rutrum mauris, eu vehicula eros. Maecenas sit amet aliquam libero. Quisque ac felis non enim auctor semper. Integer vel tempus ex, sed auctor neque. Curabitur eu arcu sit amet mi euismod placerat. Donec vehicula, augue quis ornare pharetra, ex felis faucibus dolor, at gravida ante urna posuere mi. Nunc non egestas dolor, id pulvinar risus. Vivamus id ligula ac orci euismod mattis nec id lacus. Phasellus id cursus lorem.</p>
+			<p title="I'm a tooltip">Proin tortor diam, imperdiet nec ligula ut, luctus semper sem. Vestibulum sed elit sem. Phasellus vel risus in nulla imperdiet ultricies ac sit amet nibh. Duis cursus felis vel lectus condimentum, quis maximus sem fermentum. Sed molestie orci ac quam congue tincidunt quis id diam. Mauris consectetur magna ac rutrum maximus. Vivamus quis semper lorem. Duis congue lectus nec tortor vulputate consectetur. Sed ac turpis et magna scelerisque pulvinar in ac tellus. Etiam ac aliquet risus, a dictum mauris. Duis at varius enim. Suspendisse vitae risus nec odio molestie sollicitudin. Fusce venenatis fermentum ultricies.</p>
+			<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+			<p>Here is a quote from WWF's website:</p>
+
+
+
+
+
+	
+	<a href="#clickMeBtn">Jump to Chapter 4</a>
+	
+	<blockquote cite="http://www.worldwildlife.org/who/index.html">
+	For 50 years, WWF has been protecting the future of nature.
+	The world's leading conservation organization,
+	WWF works in 100 countries and is supported by
+	1.2 million members in the United States and
+	close to 5 million globally.
+	</blockquote>
+	<address>
+		Written by John Doe.<br> 
+		Visit us at:<br>
+		Example.com<br>
+		Box 564, Disneyland<br>
+		USA
+		</address>
+	
+	<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+	
+	<p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+	
+	<bdo dir="rtl">This text will be written from right to left</bdo>
+	
+	
+		<b> - Bold text</b>
+			<strong> - Important text</strong>
+			<i> - Italic text</i>
+			<em> - Emphasized text</em>
+			<mark> - Marked text</mark>
+			<small> - Small text</small>
+			<del> - Deleted text</del>
+			<ins> - Inserted text</ins>
+			<sub> - Subscript text</sub>
+			<sup> - Superscript text</sup>
+		<pre>
+			My Bonnie lies over the ocean.
+		
+			My Bonnie lies over the sea.
+		
+			My Bonnie lies over the ocean.
+		
+			Oh, bring back my Bonnie to me.
+		</pre>
+		<a href="https://www.google.com" target="_blank">This is a link</a>
+		<br>
+		<div class="material-icons">favorite</div>
+		<br>
+		<!-- PLAY WITH IMAGE MAP -->
+		<!-- PLAY WITH <PICTURE></PICTURE> -->
+		<img src="assets/img/KatennaBotRGB.svg" alt="Katenna Bot" width="100">
+		<br>
+		<ul>
+			<li>This</li>
+			<li>Is</li>
+			<li>A</li>
+			<li>List</li>
+		</ul>
+		<ol>
+			<li>Coffee</li>
+			<li>Tea</li>
+			<li>Milk</li>
+		</ol>
+		<dl>
+			<dt>Coffee</dt>
+			<dd>- black hot drink</dd>
+			<dt>Milk</dt>
+			<dd>- white cold drink</dd>
+		</dl>
+		<table>
+				<thead>
+					<tr>
+						<th>Month</th>
+						<th>Savings</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>January</td>
+						<td>$100</td>
+					</tr>
+					<tr>
+						<td>February</td>
+						<td>$80</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td>Sum</td>
+						<td>$180</td>
+					</tr>
+				</tfoot>
+			</table>
+			
+	<hr>
+	<button id="clickMeBtn">Click me</button>
 	<br>
-		<span class="material-icons">favorite</span>
+	<br>
+	<br>
+	<hr>
+	<article>BLOCK LEVEL ELEMENTS</article>
+	<aside>aside</aside>
+	<canvas>canvas</canvas>
+	<div>div</div>
+	<fieldset>fieldset</fieldset>
+	
+	<figure>figuere<figcaption>figcaption</figcaption></figure>
+	<footer>footer</footer>
+	<form>form</form>
+	
+	<header>header</header>
+	
+	<main>main</main>
+	<nav>nav</nav>
+	<noscript>noscript</noscript>
+	<output>output</output>
+	<section>section</section>
+	
+	
+	<video></video>
 
 
+
+
+		</div>
+	</div>
+
+<!-- JQUERY POPPER AND JS FOR BOOTSTRAP -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 
 </html>
