Reworking HTML Layout

--- a/index.html
+++ b/index.html
@@ -96,24 +96,21 @@
 	<div class="container-fluid">
 		<div class="container">
 			<h1>Heading 1: Block Level Elements</h1>
+			<p style="color: rgba(0, 0, 0, .87);">Paragraphs, H1 through H6 address, article, aside, blockquote, canvas, dd, div, dl, dt, fieldset, figcaption, figure, footer, form, header, hr, li, main, nav, noscript, ol, p, pre, section, table, tfoot, ul, and video are all block level elements. Vestibulum facilisis nibh non pellentesque mollis. Ut a odio orci. Donec egestas vestibulum lectus, et pulvinar velit sagittis sed. Suspendisse dictum est sed accumsan efficitur. Cras in eros et ipsum lacinia scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed congue lorem eros, sed gravida ante maximus eu. Fusce et rutrum urna, vel dapibus velit. Nunc sed aliquam nisi. Integer diam felis, scelerisque sed vestibulum sed, ornare eu eros. In hac habitasse platea dictumst. Morbi vehicula nisl nec sagittis accumsan. Maecenas condimentum dapibus varius. Cras sollicitudin, quam feugiat venenatis vestibulum, turpis erat venenatis nulla, sed consequat ex diam a libero.</p>
 			<h2>Heading 2</h2>
+			<p title="I'm a tooltip">Phasellus ultricies pellentesque condimentum. Aenean ullamcorper tempus felis, at malesuada est gravida in. Nullam gravida molestie augue at pulvinar. Sed finibus et felis sed posuere. Aenean consequat luctus mi viverra interdum. Duis non eros metus. Proin tortor diam, imperdiet nec ligula ut, luctus semper sem. Vestibulum sed elit sem. Phasellus vel risus in nulla imperdiet ultricies ac sit amet nibh. Duis cursus felis vel lectus condimentum, quis maximus sem fermentum. Sed molestie orci ac quam congue tincidunt quis id diam. Mauris consectetur magna ac rutrum maximus. Vivamus quis semper lorem. Duis congue lectus nec tortor vulputate consectetur. Sed ac turpis et magna scelerisque pulvinar in ac tellus.</p>
 			<h3>Heading 3</h3>
+			<p>Mauris convallis porta convallis. Nam eget nibh consequat, aliquam tortor eget, ornare augue. Praesent at dolor molestie, facilisis turpis vel, gravida est. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam vitae consectetur lectus. Nunc id felis facilisis orci condimentum ullamcorper. Aenean a magna sed nunc ultricies facilisis nec tempus libero. Maecenas pharetra dui in commodo rhoncus. Etiam ac aliquet risus, a dictum mauris. Duis at varius enim. Suspendisse vitae risus nec odio molestie sollicitudin. Fusce venenatis fermentum ultricies.</p>
 			<h4>Heading 4</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nulla dui, ultricies ac diam eu, convallis posuere erat. Curabitur scelerisque risus id quam aliquet pharetra. Nullam ut enim tellus. Pellentesque eu odio dolor. Etiam sodales tempus posuere. Duis vel interdum purus. Suspendisse non elit mollis, aliquam dolor id, ullamcorper neque. Etiam consequat in dui dignissim semper. Sed dictum ex libero, sit amet vehicula velit iaculis et.</p>
 			<h5>Heading 5</h5>
+			<p>Nam congue neque non diam pulvinar rhoncus. Nulla neque tellus, fermentum consectetur ipsum id, ultricies vestibulum mauris. Maecenas ullamcorper eu lorem in sollicitudin. Sed quis neque lacinia, volutpat mi in, blandit metus. Sed iaculis eleifend consequat. Suspendisse potenti.</p>
 			<h6>Heading 6</h6>
-			<p style="color: rgba(0, 0, 0, .87);;">Morbi ipsum lectus, iaculis eget elit eu, egestas semper metus. Vestibulum quis rutrum mauris, eu vehicula eros. Maecenas sit amet aliquam libero. Quisque ac felis non enim auctor semper. Integer vel tempus ex, sed auctor neque. Curabitur eu arcu sit amet mi euismod placerat. Donec vehicula, augue quis ornare pharetra, ex felis faucibus dolor, at gravida ante urna posuere mi. Nunc non egestas dolor, id pulvinar risus. Vivamus id ligula ac orci euismod mattis nec id lacus. Phasellus id cursus lorem.</p>
-			<p title="I'm a tooltip">Proin tortor diam, imperdiet nec ligula ut, luctus semper sem. Vestibulum sed elit sem. Phasellus vel risus in nulla imperdiet ultricies ac sit amet nibh. Duis cursus felis vel lectus condimentum, quis maximus sem fermentum. Sed molestie orci ac quam congue tincidunt quis id diam. Mauris consectetur magna ac rutrum maximus. Vivamus quis semper lorem. Duis congue lectus nec tortor vulputate consectetur. Sed ac turpis et magna scelerisque pulvinar in ac tellus. Etiam ac aliquet risus, a dictum mauris. Duis at varius enim. Suspendisse vitae risus nec odio molestie sollicitudin. Fusce venenatis fermentum ultricies.</p>
-			<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
-			<p>Here is a quote from WWF's website:</p>
-			<a href="#clickMeBtn">Jump to Chapter 4</a>
-
-			<blockquote cite="http://www.worldwildlife.org/who/index.html">
-			For 50 years, WWF has been protecting the future of nature.
-			The world's leading conservation organization,
-			WWF works in 100 countries and is supported by
-			1.2 million members in the United States and
-			close to 5 million globally.
-			</blockquote>
+			<p>Mauris eu molestie tellus. Phasellus ornare nisi nulla. Etiam maximus diam non purus sollicitudin, et euismod enim vehicula. In in ex sed dui rutrum dapibus.</p>
+			<br>
+			<hr>
+			<br>
+			<h6 style="color: rgba(0, 0, 0, .38);">What follows is an address block element</h6>
 			<address>
 			Written by John Doe.<br> 
 			Visit us at:<br>
@@ -121,6 +118,47 @@
 			Box 564, Disneyland<br>
 			USA
 			</address>
+			<br>
+			<h6 style="color: rgba(0, 0, 0, .38);">What follows is an article block element</h6>
+			<article>
+				<h1>The article's title is here inside H1 element</h1>
+				<p>This is the article's conten inside a p element. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nulla dui, ultricies ac diam eu, convallis posuere erat. Curabitur scelerisque risus id quam aliquet pharetra. Nullam ut enim tellus. Pellentesque eu odio dolor. Etiam sodales tempus posuere. Duis vel interdum purus. Suspendisse non elit mollis, aliquam dolor id, ullamcorper neque. Etiam consequat in dui dignissim semper. Sed dictum ex libero, sit amet vehicula velit iaculis et.</p>
+			</article>
+			<br>
+			<h6 style="color: rgba(0, 0, 0, .38);">What follows is an aside block element</h6>
+			<aside>
+				<h4>Aside Title</h4>
+				<p>The aside tag defines some content aside from the content it is placed in. The aside content should be related to the surrounding content. Tip: The aside content could be placed as a sidebar in an article.</p>
+			</aside>
+			<br>
+			<h6 style="color: rgba(0, 0, 0, .38);">What follows is a blockquote block element</h6>
+			<blockquote cite="http://www.worldwildlife.org/who/index.html">
+				For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+			</blockquote>
+			<br>
+			<h6 style="color: rgba(0, 0, 0, .38);">What follows is a canvas block element</h6>
+			<canvas id="canvas"></canvas>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+			<p>Here is a quote from WWF's website:</p>
+			<a href="#clickMeBtn">Jump to Chapter 4</a>
+
+			
+			
 
 			<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
 
@@ -203,9 +241,7 @@
 			<br>
 			<br>
 			<hr>
-			<article>BLOCK LEVEL ELEMENTS</article>
 			<aside>aside</aside>
-			<canvas>canvas</canvas>
 			<div>div</div>
 			<fieldset>fieldset</fieldset>
 			<figure>figuere<figcaption>figcaption</figcaption></figure>
