--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 			<p>Inside this p block level element, you can find a var element. The var tag is a phrase tag. It defines a variable. This tag is not deprecated, but it is possible to achieve richer effect with CSS.  Example: <var>Variable</var></p>
 			<div class="material-icons">favorite</div>
 			<!-- PLAY WITH <PICTURE></PICTURE> -->
+			<!-- I am adding another comment as a test -->
 		</div>
 	</div>
 
